nav position fixed footer content overflow issue taken care of

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ nav {
     align-items: center;
 }
 
-.container {
+.nav-container {
     position: fixed;
 
 }
@@ -88,5 +88,3 @@ ul {
     font-size: 1.25rem;
     color: var(--color-medium-gray);
 }
-
-
